@startuml
skinparam linetype ortho
title User Interface Model 

interface Component {
  +Component(Component parent)
  +draw(GraphicContext): bool
  +addChild(String, Component): bool
  +removeChild(String): bool
  +getChild(String): Component
  +getParent(): Component
  +iterator(): ComponentIterator
  +setSize(float, float)
  +setPosition(float, float)
  +getSize(): float[]
  +getPosition(): float[]
}

interface Layout {
  +layout(): bool
}

abstract class BasicComponent {
  -width: float
  -height: float
  -x: float
  -y: float
  -parent: Component
  +BasicComponent(Component parent)
  +setSize(float, float)
  +setPosition(float, float)
  +getSize(): float[]
  +getPosition(): float[]
  +getParent(): Component
}

class Label {
  -text: String
  -font: Font
  +setText(String)
}

class Button {
  -text: String
  -font: Font
  +setText(String)
}

class Textbox {
  -placeholder: String
  +setPlaceholder(String)
}

class Dropdown {
  -choices: List<String>
  +setChoices(String)
  +addChoice(String)
}

class Listbox {
  -choices: List<String>
  +setChoices(String)
  +addChoice(String)
}

class GridLayout {

}

class HBoxLayout {
  -children: List<Component>

}

class VBoxLayout {
  -childern: List<Component>

}

Component <|.... BasicComponent

BasicComponent <|--- Label
BasicComponent <|--- Button
BasicComponent <|--- Textbox
BasicComponent <|--- Dropdown
BasicComponent <|--- Listbox

Component <|--- Layout
Layout *--- Component

Layout <|--- GridLayout
Layout <|--- HBoxLayout
Layout <|--- VBoxLayout

@enduml
